data/derived/sp14/progs/unify/prog0710.ml.out
Characters 142-146:
  then seen cons [h]
       ^^^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
